--- a/V48/content/theorie.tex
+++ b/V48/content/theorie.tex
@@ -86,9 +86,10 @@ ein. Eine Integration dieses Terms führt zu
 
 mit $N_{\symup{p}}$ als Zahl der zu Beginn des Ausheizens vorhandenen orientierten Dipole pro Volumeneinheit. Für den Depolarisationsstrom $I(T)$ ergibt sich
 
-\begin{equation*}
+\begin{equation}
+    \label{eqn:exp}
     I\left(T\right) = \frac{p^2E}{3k_B T_{\symup{p}}}\frac{N_{\symup{p}}}{\tau_0} \exp{\left(-\frac{1}{b\tau_0}\int_{T_0}^{T}\exp{\left(-\frac{W}{k_B T'}\right)}\symup{d}T'\right)}\exp{\left(-\frac{W}{k_B T}\right)}
-\end{equation*}
+\end{equation}
 
 Es wird angenommen, dass das Maximum dieses Stroms bei $T_{\text{max}}$ lieft. Diese ist unabhängig von der Starttemperatur.
 
