--- a/V48/content/auswertung.tex
+++ b/V48/content/auswertung.tex
@@ -25,8 +25,8 @@ aufgetragen.
 Zur Bestimmung der Aktivierungsenergie $W$ werden die Graphen in den Temperaturintervallen
 
 \begin{align*}
-  I_1 &= [\SI{}{\celsius}, \; \SI{}{\celsius}] \\
-  I_2 &= [\SI{}{\celsius}, \; \SI{}{\celsius}]
+  I_1 &= [\SI{221.35}{\kelvin}, \; \SI{253.75}{\kelvin}] \\
+  I_2 &= [\SI{224.35}{\kelvin}, \; \SI{257.15}{\kelvin}]
 \end{align*}
 
 gemäß der Exponentialfunktion 
@@ -40,28 +40,28 @@ mittels der Funktion \textit{scipy.optimize.curve\_fit} aus der Python-Bibliothe
 Die Fitparameter $a$ in den Exponenten ergeben sich also zu
 
 \begin{align*}
-  a_1 &= \num{} \\
-  a_2 &= \num{}  \; .
+  a_1 &= (\num{-7.04 +- 0.16})\cdot 10^3 \\
+  a_2 &= (\num{-6.52 +- 0.15})\cdot 10^3  \; .
 \end{align*}
 
 Durch den Vergleich mit Gleichung \eqref{eqn:exp} ergeben sich die Aktivierungsenergien
 
 \begin{align*}
-  W_1 &= -a_1 \cdot k_\text{B} = \SI{}{\eV} \\
-  W_2 &= -a_2 \cdot k_\text{B} = \SI{}{\eV}  \; .
+  W_1 &= -a_1 \cdot k_\text{B} = \SI{0.606 +- 0.014}{\eV} \\
+  W_2 &= -a_2 \cdot k_\text{B} = \SI{0.562 +- 0.013}{\eV}  \; .
 \end{align*}
 
 
 \begin{figure}
   \centering
-  \includegraphics[scale=0.7]{content/plot1.pdf}
+  \includegraphics[scale=0.75]{content/plot1.pdf}
   \caption{Exponentiell gefittete $I(T)$-Messwerte mit der Heizrate $H_1 = \SI{1.60 +- 0.28}{\kelvin\per\minute}$}
   \label{fig:plot1}
 \end{figure}
 
 \begin{figure}
   \centering
-  \includegraphics[scale=0.7]{content/plot2.pdf}
+  \includegraphics[scale=0.75]{content/plot2.pdf}
   \caption{Exponentiell gefittete $I(T)$-Messwerte mit der Heizrate $H_2 = \SI{1.65 +- 0.25}{\kelvin\per\minute}$}
   \label{fig:plot2}
 \end{figure}
