--- a/V48/content/auswertung.tex
+++ b/V48/content/auswertung.tex
@@ -51,6 +51,22 @@ Durch den Vergleich mit Gleichung \eqref{eqn:exp} ergeben sich die Aktivierungse
   W_2 &= -a_2 \cdot k_\text{B} = \SI{0.562 +- 0.013}{\eV}  \; .
 \end{align*}
 
+Die gemittelten Temperaturen der Depolarisationsstrommaxima lassen sich als
+
+\begin{align*}
+  T_\text{max,1} &= \SI{250.3 +- 0.8}{\kelvin} \\
+  T_\text{max,2} &= \SI{259.3 +- 0.7}{\kelvin}
+\end{align*}
+
+berechnen.
+
+Daraus ergeben sich die materialspezifischen Relaxationszeiten durch Umstellung der Gleichung \eqref{eqn:relax} zu
+
+\begin{align*}
+  \tau_{0,1} &= \num{} \cdot 10^{-11} \si{\second}
+  \tau_{0,2} &= \num{} \cdot 10^{-11} \si{\second} \; .
+\end{align*}
+
 
 \begin{figure}
   \centering
