--- a/V48/content/theorie.tex
+++ b/V48/content/theorie.tex
@@ -118,9 +118,10 @@ verbliebenen, noch nicht ausgerichteten Dipole und die Multiplikation mit der Au
 
 und 
 
-\begin{equation*}
+\begin{equation}
+    \label{eqn:relax}
     \ln{\left(\tau\left(T\right)\right)} = \ln{\left(\tau_0\right)} + \frac{W}{k_B T} = \left(\ln{\int_{I\left(T\right)}^{\infty}I\left(T'\right)\symup{d}T'}\right)-\ln{\left(I\left(T\right)\right)}.
-\end{equation*}
+\end{equation}
 
 Dieses Integral ist im Versuch graphisch zu bestimmen. Diese Gleichung ist unabhängig von der Heizrate.
 
