--- a/V48/content/theorie.tex
+++ b/V48/content/theorie.tex
@@ -160,9 +160,10 @@ Da $T$ eine lineare Funktion von $t$ sein soll, ergibt sich aus den vorangegange
 
 und mit Ersetzen von $\tau\left(T\right)$
 
-\begin{equation*}
+\begin{equation}
+    \label{eqn:int}
     \frac{W}{k_B T} = \ln{\left(\frac{\int_T^\infty I\left(T'\right)\symup{d}T'}{bI\left(T\right)\tau_0}\right)}.
-\end{equation*}
+\end{equation}
 
 Mit dieser Gleichung lässt sich nun $W$ berechnen. In der Praxis wird die obere Integrationsgrenze von $\infty$ in $T^*$ geändert, wobei
 $j\left(T^*\right)\approx 0$ gilt. $T^*$ soll demnach groß genug sein, um eine Gleichverteilung der Dipole herbeizuführen. 
