--- a/V48/content/auswertung.tex
+++ b/V48/content/auswertung.tex
@@ -32,6 +32,7 @@ Zur Bestimmung der Aktivierungsenergie $W$ werden die Graphen in den Temperaturi
 gemäß der Exponentialfunktion 
 
 \begin{equation}
+  \label{eqn:fit}
   f(x) = b \cdot \text{e}^{\sfrac{a}{x}}
 \end{equation}
 
@@ -63,23 +64,90 @@ berechnen.
 Daraus ergeben sich die materialspezifischen Relaxationszeiten durch Umstellung der Gleichung \eqref{eqn:relax} zu
 
 \begin{align*}
-  \tau_{0,1} &= \num{} \cdot 10^{-11} \si{\second}
-  \tau_{0,2} &= \num{} \cdot 10^{-11} \si{\second} \; .
+  \tau_{0,1} &= (\num{-0.46 +- 0.30}) \cdot 10^{-12} \si{\second}\\
+  \tau_{0,2} &= (\num{-8.00 +- 5.00}) \cdot 10^{-12} \si{\second} \; .
 \end{align*}
 
+\subsection{Bestimmung der Aktivierungsenergie $W$ nach der Integrationsmethode}
 
-\begin{figure}
+Für diese Methode werden erneut die Werte in den Tabellen \ref{tab:mess1} und \ref{tab:mess2} verwendet.
+Um die Integration nicht von dem gemessenen exponentiellen Untergrund verfälschen zu lassen, wird dieser 
+nach der Form 
+
+\begin{equation}
+  bgr(T) = c \cdot \text{e}^{d \cdot T}
+\end{equation}
+
+gefittet. Dazu werden für die erste Messreihe der zweite bis achte und 43. Messwert in Abbildung \ref{fig:plot3} als Stützpunkte gewählt 
+und für die zweite Messreihe der zweite bis achte und 44. in Abbildung \ref{fig:plot4}.
+In beiden Abbildungen ist der Depolarisationsstrom $I(T)$ gegen die Temperatur $T$ aufgetragen.
+Zur Approximation dient erneut die Funktion \textit{scipy.optimize.curve\_fit} aus der Python-Bibliothek SkiPy.
+
+Die Parameter ergeben sich zu:
+
+\begin{align*}
+  c_1 &= (\num{1.63 +- 0.35})\cdot 10^-6 \\
+  d_1 &= \num{0.0462 +- 0.0008} \\
+  c_2 &= (\num{6.0 +- 0.8})\cdot 10^-6 \\
+  d_2 &= \num{0.0411 +- 0.0005} \; .
+\end{align*}
+
+Nach Approximationsvorschrift \eqref{eqn:fit} und Gleichung \eqref{eqn:int} ergeben sich die
+Fitparameter 
+
+\begin{align*}
+  a_1 &\approx \num{-18.134} \cdot 10^3 \\
+  a_2 &\approx \num{-18.763} \cdot 10^3  \; ,
+\end{align*}
+
+die Aktivierungsenergien
+
+\begin{align*}
+  W_1 &= -a_1 \cdot k_\text{B} \approx \SI{1.563}{\eV} \\
+  W_2 &= -a_2 \cdot k_\text{B} \approx \SI{1.617}{\eV}
+\end{align*}
+
+und materialspezifischen Relaxationszeiten durch Umstellung der Gleichung \eqref{eqn:relax} zu
+
+\begin{align*}
+  \tau_{0,1} &= (\num{6.64} \cdot 10^{-32} \si{\second}\\
+  \tau_{0,2} &= (\num{7.55} \cdot 10^{-32} \si{\second} \; .
+\end{align*}
+
+Zur Integration dient das Paket \textit{scipy.integrate} aus der Python-Bibliothek SkiPy.
+
+
+
+
+
+
+\begin{figure}[H]
   \centering
   \includegraphics[scale=0.75]{content/plot1.pdf}
   \caption{Exponentiell gefittete $I(T)$-Messwerte mit der Heizrate $H_1 = \SI{1.60 +- 0.28}{\kelvin\per\minute}$}
   \label{fig:plot1}
 \end{figure}
 
-\begin{figure}
+\begin{figure}[H]
   \centering
   \includegraphics[scale=0.75]{content/plot2.pdf}
   \caption{Exponentiell gefittete $I(T)$-Messwerte mit der Heizrate $H_2 = \SI{1.65 +- 0.25}{\kelvin\per\minute}$}
   \label{fig:plot2}
+\end{figure}
+
+
+\begin{figure}[H]
+  \centering
+  \includegraphics[scale=0.75]{content/plot3.pdf}
+  \caption{Integrierte $I(T)$-Messwerte mit der Heizrate $H_1 = \SI{1.60 +- 0.28}{\kelvin\per\minute}$}
+  \label{fig:plot3}
+\end{figure}
+
+\begin{figure}[H]
+  \centering
+  \includegraphics[scale=0.75]{content/plot4.pdf}
+  \caption{Integrierte $I(T)$-Messwerte mit der Heizrate $H_2 = \SI{1.65 +- 0.25}{\kelvin\per\minute}$}
+  \label{fig:plot4}
 \end{figure}
 
 
