--- a/V48/content/theorie.tex
+++ b/V48/content/theorie.tex
@@ -27,9 +27,10 @@ gegeben, welche die Form
 
 hat. Die Relaxationszeit ist dann dementsprechend mit 
 
-\begin{equation*}
+\begin{equation}
+    \label{eqn:rel}
     \tau\left(T\right) = \tau_0 \exp{\left(\frac{W}{k_B T}\right)}
-\end{equation*}
+\end{equation}
 
 gegeben. Dabei entspricht die charakteristische Relaxationszeit $\tau_0$ der Relaxationszeit für unendlich große Temperaturen. 
 
