--- a/V46/content/theorie.tex
+++ b/V46/content/theorie.tex
@@ -135,8 +135,9 @@ Umformungen
 Für den Fall quasifreier Ladungsträger wird der Grenzfall $\omega_0 \rightarrow 0$ betrachtet und die Masse $m$ durch die effektive Masse $m^*$
 ersetzt. Die Faraday-Rotation pro Einheitslänge $\theta_\text{frei} = \frac{\theta}{d}$ berechnet sich dann als 
 
-\begin{equation*}
+\begin{equation}
+    \label{eqn:mass}
     \theta_\text{frei} = \frac{e_0^3}{8\pi^2\epsilon_0 c^3} \frac{1}{(m^*)^2}\lambda^2\frac{NB}{n}\,.
-\end{equation*}
+\end{equation}
 
 Mit dieser Gleichung lässt sich die effektive Masse der Elektronen bestimmen. 
