--- a/V46/lit.bib
+++ b/V46/lit.bib
@@ -17,3 +17,20 @@
   publisher = {Springer-Verlag},
   year = 2014,
 }
+
+@book{Brech,
+  author = {Edward D. Palik},
+  title = {"Gallium Arsenide (GaAs)". In: Handbook of Optical Constants of Solids},
+  publisher = {Burlington: Academic Press},
+  year = 1997,
+  url = {http://www.sciencedirect.com/science/article/pii/B9780125444156500182},
+}
+
+@book{Theo,
+  author = {P. Lawaetz},
+  title = {"Valence-Band Parameters in Cubic Semiconductors". In: Phys. Rev. B 4},
+  publisher = {Burlington: Academic Press},
+  year = 1971,
+  url = {https://link.aps.org/doi/10.1103/PhysRevB.4.3460},
+}
+
