--- a/V47/content/auswertung.tex
+++ b/V47/content/auswertung.tex
@@ -15,7 +15,7 @@ Um $C_p$ zu bestimmen wird
 
 verwendet. Dabei ist $U$ die Heizspannung, $I$ der Heizstrom, $\symup{\Delta}t$ das Heizintervall, $M = \SI{63.5}{\gram\per\mole}$ die molare Masse \cite{Molare}, 
 $\symup{\Delta}T$ die Temperaturerhöhung und $m = \SI{342}{\gram}$ \cite{Anleitung} die Masse der Probe. Für Kupfer werden weiterhin die Dichte $\rho = \SI{8.96}{\gram\per\cubic\centi\meter}$
-\cite{KompDichte} und der Kompressionsmodul $\kappa = \SI{137.8}{\giga\pascal}$ \cite{KompDichte} angenommen.\\
+\cite{KompDichte} und der Kompressionsmodul $\kappa = \SI{137.8}{\giga\pascal}$ \cite{Molare} angenommen.\\
 
 Für $C_p$ ergeben sich die Werte in Tabelle \ref{tab:mess1}. Mithilfe von Gleichung \eqref{eqn:Temp} sind die Temperaturen umgerechnet worden. 
 
