--- a/V47/content/durchfuehrung.tex
+++ b/V47/content/durchfuehrung.tex
@@ -7,7 +7,7 @@ Der Aufbau der Messapparatur ist schematisch in Abbildung \ref{fig:aufbau} darge
 \begin{figure}
     \centering
     \includegraphics[scale = 0.7]{content/plot2.png}
-    \caption{Schematischer Aufbau der Messapparatur [?]}
+    \caption{Schematischer Aufbau der Messapparatur \cite{Anleitung}.}
     \label{fig:aufbau}
   \end{figure}
 
