--- a/V47/lit.bib
+++ b/V47/lit.bib
@@ -5,15 +5,15 @@
 }
 
 @misc{Molare,
-  author = {Lenntech},
-  title = {Kupfer(CU)},
-  url = {https://www.lenntech.de/pse/elemente/cu.htm},
-  year = 2020
+  author = {Orson L. Anderson},
+  title = {Thermodynamic Functions and Properties of MgO at High Compression and High Temperature},
+  url = {https://aip.scitation.org/doi/pdf/10.1063/1.555873},
+  note = {29. Juni 2019},
 }
 
 @misc{KompDichte,
-  author = {Rene Rausch},
-  title = {29, Kupfer(CU)},
+  author = {Yu.M. Poluektov},
+  title = {The two-parameter Debye model},
   url = {http://www.periodensystem-online.de/index.php?el=29&id=modify},
-  year = 2020
+  note = {13. April 2020},
 }
