--- a/V47/content/theorie.tex
+++ b/V47/content/theorie.tex
@@ -47,8 +47,10 @@ zu $T^3$ ab.
 
 \subsection{Quantenmechanische Betrachtung}
 
-Unter quantenmechanischer Betrachtung ergibt sich die mittlere Freie Energie $\bigl<U\bigr>$ mit diskreten
-Oszillationsenergien $E_n = \hbar \omega \left(n + \sfrac{1}{2}\right)$ als
+Bei der quantenmechanischen Betrachtung sind nur diskrete Eigenwerte $E_n = \left(n+\frac{1}{2}\right)\hslash \omega$
+erlaubt. Für $\hslash \omega \gg k_\text{B} T$ kann ein solcher Oszillator keine Energie aus dem Wärmebad aufnehmen und 
+verbleibt im Grundzustand. Für tiefe Temperaturen geht $C_\text{V}$ gegen $\num{0}$. 
+Damit ergibt sich die mittlere Freie Energie $\bigl<U\bigr>$ zu
 
 \begin{equation}
     \bigl<U\bigr> = U_\text{G} + 3N \hbar\omega \left(\bigl<n\bigr> + \sfrac{1}{2} \right) 
@@ -95,7 +97,7 @@ Im Debye-Modell werden für die Zustandsdichte folgende Annahmen vorgenommen:
 
 \begin{enumerate}
     \item Für tiefe Temperaturen können die optischen Phononen vernachlässigt und alle Phononenzweige durch drei Nährungen der Form $\omega = v \cdot k$ beschrieben werden
-    \item Der Debyewellenwektor $k_\text{D}$ als Summe über $N = \left(\frac{2\pi}{L}\right)^3   = \frac{4}{3} \pi k_\text{D}^3$ Wellenvektoren ergibt sich zu $k_\text{D} = \left(6\pi^2\sfrac{N}{V}\right)^{\sfrac{1}{3}}$. Dabei wird die Summe durch eine Integration über die erste Brillouinzone ersetzt.
+    \item Der Debyewellenvektor $k_\text{D}$ als Summe über $N = \left(\frac{2\pi}{L}\right)^3   = \frac{4}{3} \pi k_\text{D}^3$ Wellenvektoren ergibt sich zu $k_\text{D} = \left(6\pi^2\sfrac{N}{V}\right)^{\sfrac{1}{3}}$. Dabei wird die Summe durch eine Integration über die erste Brillouinzone ersetzt.
 \end{enumerate}
 
 Es ergeben sich die Zustandsdichte 
