--- a/V46/content/auswertung.tex
+++ b/V46/content/auswertung.tex
@@ -106,12 +106,11 @@ Die Regressionsparameter für die Proben mit $N = \SI{2.8e18}{\per\cubic\centi\m
 $\SI{1.2e18}{\per\cubic\centi\meter}$ ergeben sich zu:
 
 \begin{align*}
-    a_1 &= \SI{ 9.359 +- 11.1950}{\meter\tothe{-3}}\\
-    b_1 &= \SI{73.905 +- 49.0425}{\meter\tothe{-1}}\\
-    a_2 &= \SI{12.397 +-  9.3627}{\meter\tothe{-3}}\\
-    b_2 &= \SI{ 1.424 +- 41.0156}{\meter\tothe{-1}}\; .
+    a_1 &= \SI{24.401 +- 4.832}{\meter\tothe{-3}}\\
+    a_2 &= \SI{12.687 +- 3.352}{\meter\tothe{-3}}\; .
 \end{align*}
 
+Die Achsenabschnittsparameter werden zur Optimierung des Fits bei $b_1 = b_2 = \SI{0}{\meter\tothe{-1}}$ fixiert.
 Die effektiven Massen 
 
 \begin{equation}
@@ -121,8 +120,8 @@ Die effektiven Massen
 ergeben sich nach Umstellung der Gleichung \eqref{eqn:mass} mit einem Brechungsindex von $n = \num{3.3543}$ \cite{Brech} (S.439) zu 
  
 \begin{align*}
-    m^*_{1,N = \SI{2.8e18}{\per\cubic\centi\meter}} &= \num{0.10 +- 0.06} \cdot m_e \\
-    m^*_{2,N = \SI{1.2e18}{\per\cubic\centi\meter}} &= \num{0.058 +- 0.022} \cdot m_e 
+    m^*_{1,N = \SI{2.8e18}{\per\cubic\centi\meter}} &= \num{0.063 +- 0.006} \cdot m_e \\
+    m^*_{2,N = \SI{1.2e18}{\per\cubic\centi\meter}} &= \num{0.057 +- 0.008} \cdot m_e 
 \end{align*}
 
 relativ zur Elektronenmasse $m_e = \SI{9.1093837015e-31}{\kilo\gram}$.
