--- a/V46/content/diskussion.tex
+++ b/V46/content/diskussion.tex
@@ -13,12 +13,11 @@ Von dem Theoriewert der effektiven Masse $m^*{theo} = \num{0.067}m_e$ \cite{Theo
 weichen die experimentell bestimmten effektiven Massen um
 
 \begin{align*}
-    \Delta m^*_1 &= \SI{52.47}{\percent} \\
-    \Delta m^*_2 &= \SI{13.27}{\percent}
+    \Delta m^*_1 &= \SI{5.57}{\percent} \\
+    \Delta m^*_2 &= \SI{14.26}{\percent}
 \end{align*}
 
 ab.
-Da die Abweichungen für die beiden dotierten Proben recht unterschiedlich ist, kann neben möglichen Justagefehlern oder
-Messfehlern bei der hochreinen Probe, die beide n-dotierten Proben betreffen würden, ein Fehler bei der Messung der ersten 
-Probe vorgefallen sein. Beispielsweise könnte die erste Probe leicht beschädigt oder bei deren Messung Unreinheiten der Optiken
-vorhanden gewesen sein. Insgesamt allerdings liegen beide Ergebnisse recht nah am Theoriewert.
+Die geringen Abweichungen können aus möglichen Justagefehlern oder
+Messfehlern der Proben folgen.
+Insgesamt allerdings liegen beide Ergebnisse recht nah am Theoriewert.
